0025524: XmlTObjDrivers_ModelDriver::Paste will cause crash when saving model.